--- a/templates/listPageAgent.html
+++ b/templates/listPageAgent.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>User Vehicle Information Form</title>
+  <title>Agent Vehicle Information Form</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script>
@@ -20,9 +20,9 @@
 
 <body>
   <div class="container-fluid">
-    {% for i in user %}
+    {% for i in agent %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">USER</a>
+      <a class="navbar-brand" href="#">AGENT</a>
       <div class="navbar-collapse justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -57,13 +57,12 @@
             <th>City</th>
             <th>Zip</th>
             <th>Email</th>
-            <th>Agent Name</th>
           </tr>
         </thead>
         <tbody>
           {% for veh in vehicle_list %}
           <!-- Example row -->
-          <form action="#" method="post" enctype="multipart/form-data">
+          <form action="{% url 'agentVehicleEditForm' veh.id %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <tr>
               {% if veh.vehicle_registration == "" %}
@@ -79,11 +78,7 @@
               <td>{{veh.city}}</td>
               <td>{{veh.zip_code}}</td>
               <td>{{veh.email}}</td>
-              {% for j in users %}
-              {% if j.id == veh.agent_id %}
-              <td>{{j.username}}</td>
-              {% endif %}
-              {% endfor %}
+              <td><button type="submit" class="btn btn-primary">Edit</button></td>
             </tr>
           </form>
           {% endfor %}
