--- a/templates/listPageAgent.html
+++ b/templates/listPageAgent.html
@@ -16,7 +16,7 @@
   <div class="container-fluid">
     {% for i in agent %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">AGENT</a>
+      <a class="navbar-brand" href="{% url 'agent' %}">AGENT</a>
       <div class="navbar-collapse justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item">
